# magni_web

./: CMakeLists.txt  README.md  package.xml  settings.cfg  setup.py
launch/: server.launch  server_raspicam.launch  server_rosbridge.launch  server_rosbridge_raspicam.launch
nodes/: bag_recorder.py  server.py  services_worker.py
public/: battery.js  index.html  init.js  keyboard.js  landscape_input.js  main.js  manifest.json  modal.js  portrait_input.js  record.js  roslink.js  settings.js  videostream.js
public/assets/css/: landscape.css  portrait.css  shared.css
public/lib/: roslib.min.js  virtualjoystick.js
scripts/: server.py
srv/: BagRecord.srv  DiskList.srv  Settings.srv
